manifests/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  labels:
    app: appuio
  name: appuio.ch
spec:
  host: appuio.ch
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appuio
    weight: 100
  wildcardPolicy: None
